add new messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,7 @@
 client.name.not-blank=client name must not be blank
 client.email-not-blank=client name must not be blank
 client-email-format=client email must be in correct format
+
+user.username.not-blank=username must not be blank
+user.email.not-blank=user email cannot be blank
+user.password.not-blank=user password must not be blank
