--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 client.name.not-blank=client name must not be blank
 client.email-not-blank=client name must not be blank
 client-email-format=client email must be in correct format
+client.id.not-null=client id is required
 
 user.username.not-blank=username must not be blank
 user.email.not-blank=user email cannot be blank
