--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,7 @@ client.id.not-null=client id is required
 user.username.not-blank=username must not be blank
 user.email.not-blank=user email cannot be blank
 user.password.not-blank=user password must not be blank
+
+template.name.not.blank=template name must not be blank
+template.subject.not.blank=template subject must not be blank
+template.content.not.blank=template content must not be blank
