--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,3 +10,4 @@ user.password.not-blank=user password must not be blank
 template.name.not.blank=template name must not be blank
 template.subject.not.blank=template subject must not be blank
 template.content.not.blank=template content must not be blank
+template.id.not.blank=template id must not be blank
