improve message readability

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,13 +1,13 @@
-client.name.not-blank=client name must not be blank
-client.email-not-blank=client name must not be blank
-client-email-format=client email must be in correct format
-client.id.not-null=client id is required
+client.name.not-blank=Client name is required.
+client.email-not-blank=Client email is required.
+client-email-format=Please provide a valid client email address.
+client.id.not-null=Client ID is required.
 
-user.username.not-blank=username must not be blank
-user.email.not-blank=user email cannot be blank
-user.password.not-blank=user password must not be blank
+user.username.not-blank=Username is required.
+user.email.not-blank=User email is required.
+user.password.not-blank=Password is required.
 
-template.name.not.blank=template name must not be blank
-template.subject.not.blank=template subject must not be blank
-template.content.not.blank=template content must not be blank
-template.id.not.blank=template id must not be blank
+template.name.not.blank=Template name is required.
+template.subject.not.blank=Template subject is required.
+template.content.not.blank=Template content is required.
+template.id.not.blank=Template ID is required.
