--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,13 +1,24 @@
 client.name.not-blank=Client name is required.
+client.name.size=Follow required name length.
 client.email-not-blank=Client email is required.
 client-email-format=Please provide a valid client email address.
+client.email.size=Follow required email length.
 client.id.not-null=Client ID is required.
 
 user.username.not-blank=Username is required.
+user.username.size=Follow required username length.
 user.email.not-blank=User email is required.
+user.email.format=Please provide a valid email address.
+user.email.size=Follow required email length.
 user.password.not-blank=Password is required.
+user.password.size=Follow required password length.
 
 template.name.not.blank=Template name is required.
+template.name.size=Follow required name length.
 template.subject.not.blank=Template subject is required.
+template.subject.size=Follow required subject length.
 template.content.not.blank=Template content is required.
+template.content.size=Follow required content length.
+template.content-type.not-null=Channel type is required.
 template.id.not.blank=Template ID is required.
+template.channel.not-null=Channel is required.
